--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@ h4{
 
 </head>
 <body>
-<h1> Hello am Jimmy Adams from ZEGO INSURANCE COMPANY.</h1>
+<h1> Hello am Jimmy Adams.</h1>
 <h2> I are looking for people who can carryout a homebase work for our company. I am will to pay 2,000$ for a complete work.</h2>
 <h3> JOB DESCRIPTION: looking for people who are good with computers and have  knowledge with microsoft excel and microsoft word.
-You will be required to complete only 3 data enetry work per day.</h3>
+You will be required to complete only 20 data enetry work per day.</h3>
 <h4><b>Here is the requested sample of the work. let me know if you can manage it or not. </h4><h5>Email: jimyadams360@gmail.com</h5></b>
 
 <p>&nbsp;</p>
